[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://sources/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://Screens/Capital.gd" type="Script" id=6]

[node name="Capital" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -1500.0
margin_right = 1500.0
margin_bottom = 2000.0

[node name="Capital" parent="." instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = -440.06
margin_top = 110.37
margin_right = 432.94
margin_bottom = 272.37

[node name="Inline" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Inline"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.5
margin_top = -78.5
margin_right = 337.5
margin_bottom = 78.5
align = 1
expand_to_text_length = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultipleChoice" type="Button" parent="Inline"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -241.0
margin_top = 160.823
margin_right = 241.0
margin_bottom = 266.823
text = "Multiple Choices"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultipleChoice" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 1, 1, 1, 0 )

[node name="Choices" type="GridContainer" parent="MultipleChoice"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -420.5
margin_top = -95.0
margin_right = 420.5
margin_bottom = 95.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="Button" parent="MultipleChoice/Choices"]
margin_right = 418.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice2" type="Button" parent="MultipleChoice/Choices"]
margin_left = 422.0
margin_right = 840.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice3" type="Button" parent="MultipleChoice/Choices"]
margin_top = 97.0
margin_right = 418.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice4" type="Button" parent="MultipleChoice/Choices"]
margin_left = 422.0
margin_top = 97.0
margin_right = 840.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Inline/MultipleChoice" to="." method="_on_MultipleChoice_button_up"]
